tests/tooling/fixtures/native/recovery/positive/extern_pure_prototype_decl_then_definition.objc3
module ExternPurePrototypeDeclThenDefinition;

extern pure fn add(lhs: i32, rhs: i32) -> i32;

fn add(lhs: i32, rhs: i32) -> i32 {
  return lhs + rhs;
}

fn main() -> i32 {
  return add(40, 2);
}
